# fastapi-crud

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
app/: database.py
app/post/: crud.py  models.py  routes.py  schemas.py
fastapi_crud/: database.py  main.py
fastapi_crud/post/: routes.py  schemas.py
migrations/versions/: 7bf24cac08e9_create_post_table.py
