[tool.poetry]
name = "fastapi-crud"
version = "0.1.0"
description = ""
authors = ["pea06 <jowangyu75@dgsw.hs.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
uvicorn = "^0.13.2"
SQLAlchemy = "^1.3.22"
psycopg2-binary = "^2.8.6"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
alembic = "^1.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
